# J-R

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  argus.toml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
_colony/: CEO-DIRECTIVE.md  GOALS.md  ROADMAP.md
_colony/logs/: beta-tester.lastrun
_colony/queue/: TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  TASK-006.md  TASK-007.md  TASK-008.md  TASK-009.md  TASK-010.md  TASK-011.md  TASK-012.md  TASK-013.md  TASK-014.md  TASK-015.md  TASK-016.md  TASK-017.md
_colony/reports/: DIAGNOSTIC-20260316-2330.md  alpha-1-status.md  atlas-cycle-001.md  audit-status-2026-03-16.md  beta-tester-2026-03-16T2230.md  beta-tester-2026-03-16T2315.md  beta-tester-2026-03-17T0000.md  beta-tester-2026-03-17T0045.md  beta-tester-2026-03-17T0130.md  beta-tester-2026-03-17T0215.md  ceo-cycle-001.md  ceo-cycle-002.md  ceo-cycle-003.md  ceo-cycle-004.md  ceo-cycle-005.md
_colony/review/: TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  TASK-008.md  TASK-009.md  TASK-010.md  TASK-011.md  TASK-015.md  TASK-016.md  TASK-017.md  TASK-018.md  TASK-019.md  TASK-020.md  TASK-021.md  TASK-033.md  TASK-038.md  TASK-039.md  TASK-042.md  TASK-045.md  TASK-049.md  TASK-050.md  TASK-054.md  TASK-055.md  TASK-056.md  TASK-057.md
_colony/scripts/: claim-task.sh  complete-task.sh  dedup-pipeline.sh  next-task-number.sh
docs/: api-reference.md  architecture.md  configuration.md  platform-development.md
src/argus/: __init__.py  batch.py  cli.py  shell.py
src/argus/agents/: __init__.py  base.py  classifiers.py  linker.py  network.py  orchestrator.py  profiler.py  resolver.py
src/argus/api/: __init__.py  server.py
src/argus/batch/: __init__.py  processor.py
src/argus/config/: __init__.py  loader.py  settings.py
src/argus/integrations/: __init__.py  crewai.py  langchain.py
src/argus/intel/: __init__.py  base.py  correlator.py  domain.py  email.py  (+3 more)
tests/: test_agents.py  test_api.py  test_batch.py  test_cli.py  test_config.py  test_connections_signal.py  test_custom_model.py  test_custom_scoring.py  test_encrypted_storage.py  test_face_signal.py  test_graph_export.py  test_integration_resolve.py  test_integrations.py  test_investigation_resume.py  test_linker.py  test_llm.py  test_mcp.py  test_models.py  test_mutual_connections.py  test_network.py  test_nlp.py  test_performance.py  test_pipe_mode.py  test_placeholder.py  test_platform_discord.py  test_platform_facebook.py  test_platform_github.py  test_platform_hackernews.py  test_platform_instagram.py  test_platform_linkedin.py  test_platform_mastodon.py  test_platform_medium.py  test_platform_reddit.py  test_platform_stackoverflow.py  test_platform_telegram.py  test_platform_tiktok.py  test_platform_twitter.py  test_platform_youtube.py  test_platforms.py  test_playwright_stealth.py  (+15 more)
tests/fixtures/: mock_platform.py  mock_responses.py
(+74 files in other folders)
