[project]
name = "argus-osint"
version = "0.1.0"
description = "Argus OSINT platform"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "aiohttp-retry",
    "beautifulsoup4",
    "lxml",
    "pydantic>=2.0",
    "click",
    "rich",
    "imagehash",
    "scikit-learn",
    "jellyfish",
    "networkx",
    "python-dateutil",
    "Pillow",
    "aiosqlite",
]

[project.optional-dependencies]
playwright = ["playwright"]
face = ["face-recognition", "dlib"]
llm = ["openai", "tiktoken"]
api = ["fastapi", "uvicorn", "websockets"]
mcp = ["mcp>=1.0"]

[project.scripts]
argus = "argus.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "aioresponses",
    "ruff",
    "mypy",
    "faker",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argus"]
